this is what we release with 1.5.0

--- a/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -981,7 +981,7 @@ W: Strophe 2 Zeile 2</code></pre>
 <ul>
 <li>Schaltfl&#228;che <code>Refresh</code>: Um sicher zu gehen, dass die Konfigurationsmaske wirklich die aktuellen Werte zeigt, kann mit <code>Refresh</code> die Maske neu aufgebaut werden. Dies ist z.B. dann notwendigWenn der Konfigurationsparameer au&#223;erhalb der Maske ge&#228;ndert wird (z.B. im Texteditor).</li>
 <li>Schalltfl&#228;che <code>Neuer Eintrag</code>: Diese Taste f&#252;gt eine neue Instanz eines Parameters ein. Sie ist nur aktiv, wenn es f&#252;r einen Parameter mehrere Instanzen geben kann (z.B. Liedtexte [lyrics.x], Seitenbeschrifung [notes.x])</li>
-<li>Schalltfl&#228;che <code>Schnelleinstellungen</code>: Diese Taste &#246;ffnet ein Men&#252;, aus dem du f&#252;r die aktuelle Maske eine Voreinstellung ausw&#228;hlne kannst. Eine solche Voreinstellung ist eine sinnvolle Kombination von Parametern f&#252;r einen bestimmten Fall (z.B. f&#252;r ein &#8220;kompaktes Layout&#8221;). Diese Schaltfl&#228;che ist nur f&#252;r solche Masken aktiv, f&#252;r die es auch Voreinstellungen gibt.</li>
+<li>Schalltfl&#228;che <code>Schnelleinstellungen</code>: Diese Taste &#246;ffnet ein Men&#252;, aus dem du f&#252;r die aktuelle Maske eine Voreinstellung ausw&#228;hlen kannst. Eine solche Voreinstellung ist eine sinnvolle Kombination von Parametern f&#252;r einen bestimmten Fall (z.B. f&#252;r ein &#8220;kompaktes Layout&#8221;). Diese Schaltfl&#228;che ist nur f&#252;r solche Masken aktiv, f&#252;r die es auch Voreinstellungen gibt.</li>
 <li>Feldeingabe mit der &#8220;TAB&#8221;-Taste best&#228;tigen</li>
 <li><code>Rendern</code> nicht vergessen (<strong>In der Maske dr&#252;ck erst TAB, dann geht auch das &#8220;Rendern&#8221; ab</strong>)</li>
 </ul>
