https://github.com/bwl21/zupfnoter/issues/105
Manual now reflect the primary note of unisons

--- a/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -612,7 +612,16 @@ Schw&#228;nzchen in die H&#246;h</code></pre>
 <p>Die Noten eines Mehrklanges werden automatisch mit einer Synchronisationslinie verbunden.</p>
 <blockquote>
 <p><strong>Hinweis</strong>: Dieser Mehrklang sieht in den Unterlegnoten nahezu gleich wie der Zusammenklang von T&#246;nen aus mehreren Stimmen aus. Man kann sie jedoch anhand der Flu&#223;linie unterscheiden und den jeweiligen Stimmen zuordnen.</p>
-<p>Die Angabe von Akkordsymbolen in der ABC-Notation wird f&#252;r die Unterlegnoten ignoriert.</p>
+<p><strong>Hinweis</strong>: Die Angabe von Akkordsymbolen in der ABC-Notation wird f&#252;r die Unterlegnoten ignoriert.</p>
+</blockquote>
+<p>Meist ist es so, dass bei Mehrkl&#228;ngen die h&#246;chste Note die Melodief&#252;hrung &#252;bernimmt. Daher wird bei einem Mehrklang die Flu&#223;linie and die letzte Note gef&#252;hrt.</p>
+<blockquote>
+<p><strong>Hinweis</strong>: Wenn man das anders haben m&#246;chte, muss man die Reihenfolge der Noten in der ABC-Notation ver&#228;ndern oder doe &#8220;F&#252;hrungsnote&#8221; als letzte Note wiederholen. Beispiel:</p>
+<ul>
+<li><code>[CEG]</code> - Die Flu&#223;linie geht an <code>G</code></li>
+<li><code>[GEC]</code> - Die Flu&#223;linie geht an <code>C</code></li>
+<li><code>[CEGC]</code> - Die Flu&#223;linie geht an <code>C</code></li>
+</ul>
 </blockquote></li>
 <li><p><strong>(22) triplet - Triole</strong>: Bei einer Triole werden drei Noten auf zwei Schl&#228;ge verteilt. Bei einer Triole werden Anfang und Ende einer Reihe von Noten mit einem Bogen verbunden. Die L&#228;nge der Triole wird an den Bogen geschrieben. Eine Verallgemeinerung der Triole ist das Tuplet. Dieses verteilt n Noten auf m Schl&#228;ge. Zupfnoter kann beliebige Tuplets, auch wenn bei Tischharfen meistens nur Triolen verwendet werden.</p>
 <p>Ein Tuplet entsteht, wenn in der ABC-Notation den Noten der Tuplets eine Klammer mit der L&#228;nge des Tupletes vorangestellt wird, z.B: &#8220;<code>(3CCC</code>&#8221;.</p></li>
