document non breaking space https://github.com/bwl21/zupfnoter/issues/113

--- a/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -369,6 +369,9 @@ Schw&#228;nzchen in die H&#246;h</code></pre>
 <p>Dieser Text erscheint sofort in dem Fenster rechts oben (der Notenvorschau), nicht jedoch in den Unterlegnoten. Dort erscheint der Liedtext erst, wenn die Einstellungen zur Gestaltung und Positionierung von Liedtexten eingef&#252;gt worden sind.</p>
 <p></p>
 <blockquote>
+<p><strong>Hinseis:</strong> Leerzeichen in den Liedtexten werden komprimiert, d.h. zu einem Leerzeichen zusammengefasst. Leerzeichen am Anfang einer Zeile (f&#252;hrende Leerzeichen) werden ignoriert. Du kannst aber die Ausgabe eines Leerzeichens erzwingen, wenn du die Tilde (~) anstelle eines Leerzeichens verwendest.</p>
+</blockquote>
+<blockquote>
 <p><strong>Hinweis</strong>: Wenn du zur&#252;ck gehst auf den den Reiter <code>ABC</code> siehst du in Zeile 15, (also in die Zeile nach dem &#8220;C,&#8221;) nun die folgenden zeilen (dies ist die Darstellung von Liedtexten in der ABC-Notation):</p>
 <pre><code>   W: alle meine Entchen
    W: schwimmen auf dem See
