updated manual for moronic https://github.com/bwl21/zupfnoter/issues/111

--- a/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -65,6 +65,7 @@
 <li><a href="#transponieren"><span class="toc-section-number">4.7.2</span> Transponieren</a></li>
 <li><a href="#wenn-takte-nicht-synchron-sind"><span class="toc-section-number">4.7.3</span> Wenn Takte nicht synchron sind</a></li>
 <li><a href="#mherere-Stimmen-in-abc"><span class="toc-section-number">4.7.4</span> Mehrere Stimmen in ABC-Notation</a></li>
+<li><a href="#wenn-die-vertikale-anodrnung-optimiert-werden-soll"><span class="toc-section-number">4.7.5</span> Wenn die vertikale Anodrnung optimiert werden soll</a></li>
 </ul></li>
 </ul></li>
 <li><a href="#zupfnoter-f&#252;r-experten"><span class="toc-section-number">5</span> Zupfnoter f&#252;r Experten</a><ul>
@@ -1272,6 +1273,8 @@ GAB</code></pre>
 <blockquote>
 <p><strong>Hinweis</strong>: Die ABC-Notation erlaubt mehrere <code>%%score</code> - Anweisungen. Bitte vermeide das, weil Zupfnoter daf&#252;r nicht ausgelegt ist und das Verhalten noch nicht ausgetestet ist.</p>
 </blockquote>
+<h3 id="wenn-die-vertikale-anodrnung-optimiert-werden-soll"><span class="header-section-number">4.7.5</span> Wenn die vertikale Anodrnung optimiert werden soll</h3>
+<p>Es kann vorkommen, dass man in das vertikale Layout eingreifen muss, z.B. wennd ie Flussline einer Stimme durch eine Noten einer anderen Stimme l&#228;&#252;ft. Die M&#246;glichkeiten dazu sind in Kapitel&#160;&#160;<a href="#extract.0.layout.moreinc"><code>morinc</code></a> beschrieben.</p>
 <p></p>
 <h1 id="zupfnoter-f&#252;r-experten"><span class="header-section-number">5</span> Zupfnoter f&#252;r Experten</h1>
 <h2 id="zupfnoter-einstellungen"><span class="header-section-number">5.1</span> Zupfnoter Einstellungen</h2>
