some updates i DD

--- a/30_sources/ZGEN_Documents/DD_Zupfnoter.html
+++ b/30_sources/ZGEN_Documents/DD_Zupfnoter.html
@@ -10,10 +10,12 @@
 <body>
 <div id="TOC">
 <ul>
-<li><a href="#sample-websites"><span class="toc-section-number">1</span> sample websites</a></li>
+<li><a href="#sample-websites"><span class="toc-section-number">0.1</span> sample websites</a></li>
+<li><a href="#useful-links"><span class="toc-section-number">0.2</span> useful links</a></li>
+<li><a href="#choosing-a-vector-gem"><span class="toc-section-number">0.3</span> choosing a vector-gem</a></li>
 </ul>
 </div>
-<h1 id="sample-websites"><a href="#sample-websites"><span class="header-section-number">1</span> sample websites</a></h1>
+<h2 id="sample-websites"><span class="header-section-number">0.1</span> sample websites</h2>
 <p>http://wfiedler-online.de/musikblog3/abc.php</p>
 <p>http://de.wikipedia.org/wiki/ABC_(Musiknotation)</p>
 <p>https://code.google.com/p/abcjs/</p>
@@ -22,5 +24,53 @@
 <p>http://normanschmidt.net/abc/index.php - chor&#228;le in abc</p>
 <p>http://penzeng.de/Geige/Abc.htm - Deutsche Anleitung</p>
 <p>http://abcplus.sourceforge.net/ABCPlus.pdf - Deutsche Anleitung</p>
+<p>https://github.com/MrRio/jsPDF</p>
+<p>https://github.com/paulrosen/abcjs</p>
+<p>http://trillian.mit.edu/~jc/cgi/abc/tunefind - tunefinder</p>
+<p>http://homepage.bnv-bamberg.de/flg-blw-partnerschaft/musik-facharbeit-eva-klein.pdf</p>
+<h2 id="useful-links"><span class="header-section-number">0.2</span> useful links</h2>
+<p>https://github.com/paulrosen/abcjs - the abcjs package</p>
+<p>http://www.musicxml.com/ - detailled information about musicxml</p>
+<p>https://github.com/paulrosen/abcjs the sourcecode of an abcprocessor in js</p>
+<p>https://github.com/mudcube/MIDI.js - wie man midi im browser spielen kann</p>
+<p>http://threejs.org/ - webgl library</p>
+<p>http://raphaeljs.com/ - JS vector library</p>
+<p>https://github.com/dr-skot/abc # ruby/treetop parser</p>
+<p>https://github.com/PencilCode/musical.js # javascript player for ABC</p>
+<h2 id="choosing-a-vector-gem"><span class="header-section-number">0.3</span> choosing a vector-gem</h2>
+<p>In order to compute the l ayout slurs and triplets we need a 2d vector library with :</p>
+<ul>
+<li>add, subtract</li>
+<li>rotate</li>
+<li>angle</li>
+<li>create from array</li>
+<li>to_a</li>
+</ul>
+<p>nice to have</p>
+<ul>
+<li>various constructors</li>
+<li>inspect</li>
+</ul>
+<p>special</p>
+<p>.to_path</p>
+<ul>
+<li><p>vector2d</p>
+<ul>
+<li>big</li>
+<li>well documented</li>
+<li>actively maintained</li>
+</ul>
+<p>The library of choice. Maybe I strip it down if it is too big.</p></li>
+<li><p>vector2d-ruby</p>
+<ul>
+<li>small</li>
+<li>not documented</li>
+<li>acively maintained</li>
+</ul></li>
+<li><p>uzi-vector</p>
+<ul>
+<li>not actively maintained</li>
+</ul></li>
+</ul>
 </body>
 </html>
