--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -157,7 +157,7 @@
 <li><a href="#extract.0.nonflowrest"><span class="toc-section-number">8.56</span> <code>extract.0.nonflowrest</code> - Begleitpausen</a></li>
 <li><a href="#extract.0.notebound.minc"><span class="toc-section-number">8.57</span> <code>extract.0.notebound.minc</code> - extra Vorschub</a></li>
 <li><a href="#extract.0.notebound.minc.x.minc_f"><span class="toc-section-number">8.58</span> <code>extract.0.notebound.minc.x.minc_f</code> - Faktor</a></li>
-<li><a href="#extract.0.notebound.tuplet"><span class="toc-section-number">8.59</span> <code>extract.0.notebound.tuplet</code> - n-tole</a></li>
+<li><a href="#extract.0.notebound.tuplet"><span class="toc-section-number">8.59</span> <code>extract.0.notebound.tuplet</code> - n-Tole</a></li>
 <li><a href="#extract.0.notes"><span class="toc-section-number">8.60</span> <code>extract.0.notes</code> - Seitenbeschriftungen</a></li>
 <li><a href="#extract.0.printer"><span class="toc-section-number">8.61</span> <code>extract.0.printer</code> - Drucker</a></li>
 <li><a href="#extract.0.printer.a3_offset"><span class="toc-section-number">8.62</span> <code>extract.0.printer.a3_offset</code> - Offset f&#252;r A3</a></li>
@@ -189,7 +189,7 @@
 <li><a href="#extract.0.subflowlines"><span class="toc-section-number">8.88</span> <code>extract.0.subflowlines</code> - Hilfsmelodielinien</a></li>
 <li><a href="#extract.0.synchlines"><span class="toc-section-number">8.89</span> <code>extract.0.synchlines</code> - Synchronisationslinien</a></li>
 <li><a href="#extract.0.title"><span class="toc-section-number">8.90</span> <code>extract.0.title</code> - Titel</a></li>
-<li><a href="#extract.0.tuplets"><span class="toc-section-number">8.91</span> <code>extract.0.tuplets</code> - n-tolen</a></li>
+<li><a href="#extract.0.tuplets"><span class="toc-section-number">8.91</span> <code>extract.0.tuplets</code> - n-Tolen</a></li>
 <li><a href="#extract.0.tuplets.text"><span class="toc-section-number">8.92</span> <code>extract.0.tuplets.text</code> - Text</a></li>
 <li><a href="#extract.0.voices"><span class="toc-section-number">8.93</span> <code>extract.0.voices</code> - Stimmen</a></li>
 <li><a href="#presets.notes"><span class="toc-section-number">8.94</span> <code>presets.notes</code> - Seitenbeschriftungen</a></li>
@@ -258,17 +258,18 @@
 <li><a href="#templates.images.show"><span class="toc-section-number">8.157</span> <code>templates.images.show</code> - anzeigen</a></li>
 <li><a href="#templates.lyrics"><span class="toc-section-number">8.158</span> <code>templates.lyrics</code> - Liedtexte</a></li>
 <li><a href="#templates.lyrics.pos"><span class="toc-section-number">8.159</span> <code>templates.lyrics.pos</code> - Position</a></li>
-<li><a href="#templates.lyrics.verses"><span class="toc-section-number">8.160</span> <code>templates.lyrics.verses</code> - Strophen</a></li>
-<li><a href="#templates.notes"><span class="toc-section-number">8.161</span> <code>templates.notes</code> - Seitenbeschriftungen</a></li>
-<li><a href="#templates.notes.pos"><span class="toc-section-number">8.162</span> <code>templates.notes.pos</code> - Position</a></li>
-<li><a href="#templates.notes.style"><span class="toc-section-number">8.163</span> <code>templates.notes.style</code> - Stil</a></li>
-<li><a href="#templates.notes.text"><span class="toc-section-number">8.164</span> <code>templates.notes.text</code> - Text</a></li>
-<li><a href="#templates.tuplet"><span class="toc-section-number">8.165</span> <code>templates.tuplet</code> - n-tole</a></li>
-<li><a href="#templates.tuplet.cp1"><span class="toc-section-number">8.166</span> <code>templates.tuplet.cp1</code> - cp1</a></li>
-<li><a href="#templates.tuplet.cp2"><span class="toc-section-number">8.167</span> <code>templates.tuplet.cp2</code> - cp2</a></li>
-<li><a href="#templates.tuplet.shape"><span class="toc-section-number">8.168</span> <code>templates.tuplet.shape</code> - Linienform</a></li>
-<li><a href="#templates.tuplet.show"><span class="toc-section-number">8.169</span> <code>templates.tuplet.show</code> - anzeigen</a></li>
-<li><a href="#wrap"><span class="toc-section-number">8.170</span> <code>wrap</code> - wrap</a></li>
+<li><a href="#templates.lyrics.style"><span class="toc-section-number">8.160</span> <code>templates.lyrics.style</code> - Stil</a></li>
+<li><a href="#templates.lyrics.verses"><span class="toc-section-number">8.161</span> <code>templates.lyrics.verses</code> - Strophen</a></li>
+<li><a href="#templates.notes"><span class="toc-section-number">8.162</span> <code>templates.notes</code> - Seitenbeschriftungen</a></li>
+<li><a href="#templates.notes.pos"><span class="toc-section-number">8.163</span> <code>templates.notes.pos</code> - Position</a></li>
+<li><a href="#templates.notes.style"><span class="toc-section-number">8.164</span> <code>templates.notes.style</code> - Stil</a></li>
+<li><a href="#templates.notes.text"><span class="toc-section-number">8.165</span> <code>templates.notes.text</code> - Text</a></li>
+<li><a href="#templates.tuplet"><span class="toc-section-number">8.166</span> <code>templates.tuplet</code> - n-Tole</a></li>
+<li><a href="#templates.tuplet.cp1"><span class="toc-section-number">8.167</span> <code>templates.tuplet.cp1</code> - cp1</a></li>
+<li><a href="#templates.tuplet.cp2"><span class="toc-section-number">8.168</span> <code>templates.tuplet.cp2</code> - cp2</a></li>
+<li><a href="#templates.tuplet.shape"><span class="toc-section-number">8.169</span> <code>templates.tuplet.shape</code> - Linienform</a></li>
+<li><a href="#templates.tuplet.show"><span class="toc-section-number">8.170</span> <code>templates.tuplet.show</code> - anzeigen</a></li>
+<li><a href="#wrap"><span class="toc-section-number">8.171</span> <code>wrap</code> - wrap</a></li>
 </ul></li>
 <li><a href="#&#228;nderungsgeschichte"><span class="toc-section-number">9</span> &#196;nderungsgeschichte</a><ul>
 <li><a href="#v-1.9"><span class="toc-section-number">9.1</span> v 1.9</a></li>
@@ -1087,23 +1088,29 @@ W: Strophe 2 Zeile 2</code></pre>
 <p><strong>Hinweis</strong>: Diese Funktionen k&#246;nnen teilweise &#252;ber das Men&#252; <code>Extras</code> erreicht werden.</p>
 </blockquote>
 <p>Andererseits gibt es gerade in der Konsole manche experimentelle Zusatzfunktion, die noch nicht an die grafische Oberfl&#228;che angeschlossen ist.</p>
-<p>Folgende Befehle zum Arbeiten mit voreingestellen Ausz&#252;gen bzw. Beschriftungen</p>
+<p>Folgende Befehle steuern, welche Files in der Dropbox gespeichert werden:</p>
+<ul>
+<li><code>saveformat A3</code> - Es werden nur die A3-Druckdateien gespeichert</li>
+<li><code>saveformat A4</code> - Es werden nur die A4-Druckdateien gespeichert</li>
+<li><code>saveformat A3-A4</code> - Es werden die A3 und A4-Druckdateien gespeichert</li>
+</ul>
+<p>Folgende Befehle dienen zum Arbeiten mit voreingestellen Ausz&#252;gen bzw. Beschriftungen</p>
 <ul>
 <li><code>setstdnotes</code>: kopiert dem aktuellen St&#252;ck die Konfiguration der Blattbeschriftungen usw um sie auf ein anderes St&#252;ck zu &#252;bertragen.</li>
 <li><code>stdnotes</code>: &#252;bertr&#228;gt die zuletzt kopierte Konfiguration der Blattbeschriftungen auf das aktuelle St&#252;ck in den aktuellen Auszug.</li>
-<li><code>setstdextract</code>: kopiert aus dem aktuellen St&#252;ck die Konfiguration der Ausz&#252;ge, um sie auf ein anderes St&#252;ck zu &#252;bertragen. &gt; <strong>Hinweis</strong>: diese Anwweisung wird ach ausgef&#252;hrt bei <code>settemplate</code></li>
+<li><code>setstdextract</code>: kopiert aus dem aktuellen St&#252;ck die Konfiguration der Ausz&#252;ge, um sie auf ein anderes St&#252;ck zu &#252;bertragen. &gt; <strong>Hinweis</strong>: diese Anwweisung wird auch ausgef&#252;hrt bei <code>settemplate</code></li>
 <li><p><code>stdectract</code>: &#252;bertr&#228;gt die zuletzt kopierte Konfiguration der Ausz&#252;ge auf das aktuelle St&#252;ck</p>
 <blockquote>
-<p><strong>Hinweis</strong>: Diese Befehle sind hilfreich um schnell die Konfiguration eines aus MusicXml importierten St&#252;ckes einzustellen.</p>
+<p><strong>Hinweis</strong>: Diese Befehle sind hilfreich um schnell die Konfiguration eines aus MusicXml importierten St&#252;ckes einzustellen. &#8216;stdextract&#8217; wird automatisch beim import aus MusicXml ausgef&#252;hrt.</p>
 </blockquote></li>
 <li><p><code>settemplate</code>: Damit wird der aktuelle Editor-Inhalt als Vorlage hinterlegt (siehe Kapitel &#160;<a href="#filetemplates">Arbeiten mit Dateivorlagen</a>).</p></li>
 </ul>
 <p>&#220;ber folgende Befehle kann eingestellt werden, ob die Vorschaufenster zur aktuellen Note scrollen bzw. der Wiedergabe folgen</p>
 <ul>
-<li>setsetting autoscroll true` - Vorschaufenster scrollen automatisch</li>
-<li>setsetting autoscroll false` - Vorschaufenster scrollen nicht</li>
-<li>setsetting follow true` - Vorschaufenster folgen der Wiedergabe</li>
-<li>setsetting follow false` - Vorschaufenster folgen <strong>nicht</strong> der Wiedergabe</li>
+<li><code>setsetting autoscroll true</code> - Vorschaufenster scrollen automatisch</li>
+<li><code>setsetting autoscroll false</code> - Vorschaufenster scrollen nicht</li>
+<li><code>setsetting follow true</code> - Vorschaufenster folgen der Wiedergabe</li>
+<li><code>setsetting follow false</code> - Vorschaufenster folgen der Wiedergabe <strong>nicht mehr</strong></li>
 </ul>
 <p>&#220;ber folgende Befehle k&#246;nnen Flu&#223;linien gestaltet werden:</p>
 <ul>
@@ -2374,7 +2381,7 @@ maintain the keys to be shown here in conf_doc_source.rb
 <li><code>0.5</code> vergr&#246;&#223;ert den Vorschub um die H&#228;lfte einer ganzen Note.</li>
 </ul>
 <p>&#8230; kein Beispiel verf&#252;gbar &#8230;</p>
-<h2 id="extract.0.notebound.tuplet"><span class="header-section-number">8.59</span> <code>extract.0.notebound.tuplet</code> - n-tole</h2>
+<h2 id="extract.0.notebound.tuplet"><span class="header-section-number">8.59</span> <code>extract.0.notebound.tuplet</code> - n-Tole</h2>
 <p>Hier kannst du die Darstellung von Triolen (genauer gesagt, von n-Tolen) steuern.</p>
 <blockquote>
 <p><strong>Hinweis</strong>:</p>
@@ -2558,7 +2565,7 @@ maintain the keys to be shown here in conf_doc_source.rb
 </blockquote>
 <pre><code>    &quot;title&quot;: &quot;alle Stimmen&quot;
       </code></pre>
-<h2 id="extract.0.tuplets"><span class="header-section-number">8.91</span> <code>extract.0.tuplets</code> - n-tolen</h2>
+<h2 id="extract.0.tuplets"><span class="header-section-number">8.91</span> <code>extract.0.tuplets</code> - n-Tolen</h2>
 <p>Hier kannst du die generelle Darstellung von n-Tolen konfigurieren.</p>
 <pre><code>    &quot;tuplets&quot;: {&quot;text&quot;: &quot;{{tuplet}}&quot;}
       </code></pre>
@@ -3040,7 +3047,7 @@ maintain the keys to be shown here in conf_doc_source.rb
         &quot;pos&quot;       : [10, 10],
         &quot;show&quot;      : true
       },
-      &quot;lyrics&quot;      : {&quot;pos&quot;: [350, 70], &quot;verses&quot;: [1]},
+      &quot;lyrics&quot;      : {&quot;pos&quot;: [350, 70], &quot;style&quot;: &quot;regular&quot;, &quot;verses&quot;: [1]},
       &quot;notes&quot;       : {&quot;pos&quot;: [320, 6], &quot;style&quot;: &quot;large&quot;, &quot;text&quot;: &quot;ENTER_NOTE&quot;},
       &quot;tuplet&quot;      : {
         &quot;cp1&quot;   : [5, 2],
@@ -3103,32 +3110,36 @@ maintain the keys to be shown here in conf_doc_source.rb
 <h2 id="templates.lyrics"><span class="header-section-number">8.158</span> <code>templates.lyrics</code> - Liedtexte</h2>
 <p>Hier steuerst du die Positionierung der Liedtexte. Dabei kannst du den Liedtext auf mehrer Bl&#246;cke aufteilen.</p>
 <p>Ein einzelner Block listet die Strophen auf, die er enth&#228;lt, und die gemeinsam poitioniert werden.</p>
-<pre><code>    &quot;lyrics&quot;: {&quot;pos&quot;: [350, 70], &quot;verses&quot;: [1]}
+<pre><code>    &quot;lyrics&quot;: {&quot;pos&quot;: [350, 70], &quot;style&quot;: &quot;regular&quot;, &quot;verses&quot;: [1]}
       </code></pre>
 <h2 id="templates.lyrics.pos"><span class="header-section-number">8.159</span> <code>templates.lyrics.pos</code> - Position</h2>
 <p>Dies ist die Vorgabe f&#252;r Position, an welcher der Liedtext-Block ausgegeben werden soll. Angabe erfolgt in mm als kommagetrennte Liste von horizontaler / vertikaler Position.</p>
 <pre><code>    &quot;pos&quot;: [350, 70]
       </code></pre>
-<h2 id="templates.lyrics.verses"><span class="header-section-number">8.160</span> <code>templates.lyrics.verses</code> - Strophen</h2>
+<h2 id="templates.lyrics.style"><span class="header-section-number">8.160</span> <code>templates.lyrics.style</code> - Stil</h2>
+<p>Hier kannst du den Stil f&#252;r den Text einstellen. Du hast eine Auswahl aus vordefinierten Stilen.</p>
+<pre><code>    &quot;style&quot;: &quot;regular&quot;
+      </code></pre>
+<h2 id="templates.lyrics.verses"><span class="header-section-number">8.161</span> <code>templates.lyrics.verses</code> - Strophen</h2>
 <p>Dies ist die Vorgabe f&#252;r die Liste der Strophen die im Liedtext-Block ausgegeben werden.</p>
 <pre><code>    &quot;verses&quot;: [1]
       </code></pre>
-<h2 id="templates.notes"><span class="header-section-number">8.161</span> <code>templates.notes</code> - Seitenbeschriftungen</h2>
+<h2 id="templates.notes"><span class="header-section-number">8.162</span> <code>templates.notes</code> - Seitenbeschriftungen</h2>
 <p>Hier kannst du eine Seitenbeschriftungen hinzuf&#252;gen. Beim Einf&#252;gen einer Seitenbeschriftung vergibt Zupfnoter eine Nummer anstelle der <code>.0</code>.</p>
 <blockquote>
 <p><strong>Hinweis</strong>: Es kann aber auch sinnvoll sein eine sprechende Bezeichnung f&#252;r die Beschriftung manuell vorzugeben um ihrer spezifische Verwendung hervorzuheben z.B. <code>notes.T_Copyright</code>. Das ist allerdings nur in der Textansicht m&#246;glich.</p>
 </blockquote>
 <pre><code>    &quot;notes&quot;: {&quot;pos&quot;: [320, 6], &quot;style&quot;: &quot;large&quot;, &quot;text&quot;: &quot;ENTER_NOTE&quot;}
       </code></pre>
-<h2 id="templates.notes.pos"><span class="header-section-number">8.162</span> <code>templates.notes.pos</code> - Position</h2>
+<h2 id="templates.notes.pos"><span class="header-section-number">8.163</span> <code>templates.notes.pos</code> - Position</h2>
 <p>Hier gibst du die Position an. Angabe erfolgt in mm als kommagetrennte Liste von horizontaler / vertikaler Position.</p>
 <pre><code>    &quot;pos&quot;: [320, 6]
       </code></pre>
-<h2 id="templates.notes.style"><span class="header-section-number">8.163</span> <code>templates.notes.style</code> - Stil</h2>
+<h2 id="templates.notes.style"><span class="header-section-number">8.164</span> <code>templates.notes.style</code> - Stil</h2>
 <p>Hier kannst du den Stil f&#252;r den Text einstellen. Du hast eine Auswahl aus vordefinierten Stilen.</p>
 <pre><code>    &quot;style&quot;: &quot;large&quot;
       </code></pre>
-<h2 id="templates.notes.text"><span class="header-section-number">8.164</span> <code>templates.notes.text</code> - Text</h2>
+<h2 id="templates.notes.text"><span class="header-section-number">8.165</span> <code>templates.notes.text</code> - Text</h2>
 <p>Hier gibst du den Text, der ausgegeben werden soll. Dieser Text kann auch mehrzeilig sein. Folgende Platzhalter kannst du verwenden:</p>
 <ul>
 <li><code>{{composer}}</code>: Komponist aus <code>C:</code> Zeilen</li>
@@ -3143,7 +3154,7 @@ maintain the keys to be shown here in conf_doc_source.rb
 <li><p><code>{{printed_extracts}}</code>: erstellte Ausz&#252;ge aus &#8220;produce&#8221;. Es werden die entsprechneden Filenamenzus&#228;tze ausgegeben.</p>
 <pre><code>&quot;text&quot;: &quot;ENTER_NOTE&quot;</code></pre></li>
 </ul>
-<h2 id="templates.tuplet"><span class="header-section-number">8.165</span> <code>templates.tuplet</code> - n-tole</h2>
+<h2 id="templates.tuplet"><span class="header-section-number">8.166</span> <code>templates.tuplet</code> - n-Tole</h2>
 <p>Hier kannst du die Darstellung von Triolen (genauer gesagt, von n-Tolen) steuern.</p>
 <blockquote>
 <p><strong>Hinweis</strong>:</p>
@@ -3157,15 +3168,15 @@ maintain the keys to be shown here in conf_doc_source.rb
       &quot;show&quot;  : true
     }
       </code></pre>
-<h2 id="templates.tuplet.cp1"><span class="header-section-number">8.166</span> <code>templates.tuplet.cp1</code> - cp1</h2>
+<h2 id="templates.tuplet.cp1"><span class="header-section-number">8.167</span> <code>templates.tuplet.cp1</code> - cp1</h2>
 <p>Hier gibst du den Kontrollpunkt f&#252;r die erste Note an.</p>
 <pre><code>    &quot;cp1&quot;: [5, 2]
       </code></pre>
-<h2 id="templates.tuplet.cp2"><span class="header-section-number">8.167</span> <code>templates.tuplet.cp2</code> - cp2</h2>
+<h2 id="templates.tuplet.cp2"><span class="header-section-number">8.168</span> <code>templates.tuplet.cp2</code> - cp2</h2>
 <p>Hier gibst du den Kontrollpunkt f&#252;r die letzte Note an.</p>
 <pre><code>    &quot;cp2&quot;: [5, -2]
       </code></pre>
-<h2 id="templates.tuplet.shape"><span class="header-section-number">8.168</span> <code>templates.tuplet.shape</code> - Linienform</h2>
+<h2 id="templates.tuplet.shape"><span class="header-section-number">8.169</span> <code>templates.tuplet.shape</code> - Linienform</h2>
 <p>Hier gibst du eine Liste von Linienformen f&#252;r die n-tole an.</p>
 <ul>
 <li><code>c</code>: Kurve</li>
@@ -3176,11 +3187,11 @@ maintain the keys to be shown here in conf_doc_source.rb
 </blockquote>
 <pre><code>    &quot;shape&quot;: [&quot;c&quot;]
       </code></pre>
-<h2 id="templates.tuplet.show"><span class="header-section-number">8.169</span> <code>templates.tuplet.show</code> - anzeigen</h2>
+<h2 id="templates.tuplet.show"><span class="header-section-number">8.170</span> <code>templates.tuplet.show</code> - anzeigen</h2>
 <p>Hier gibst du an, ob die n-Tole ausgegeben werden soll.</p>
 <pre><code>    &quot;show&quot;: true
       </code></pre>
-<h2 id="wrap"><span class="header-section-number">8.170</span> <code>wrap</code> - wrap</h2>
+<h2 id="wrap"><span class="header-section-number">8.171</span> <code>wrap</code> - wrap</h2>
 <p>Hier kannst du angeben, in welcher Spalte der Zeilenumbruch im Konfigurationsabschnitt erfolgen soll. Das kann bei komplexen Konfigurationen sinnvoll sein, um die &#220;bersichtlichkeit zu erh&#246;hen.</p>
 <pre><code>    &quot;wrap&quot;: 60</code></pre>
 <p></p>
